[workspace]
members = [
    "blog/biz", "blog/serv", "blog/ui", "blog/browser"
]

[workspace.dependencies]
leptos = { version = "0.4" }
leptos_meta = { version = "0.4" }
leptos_router = { version = "0.4" }
leptos_dom = { version = "0.4" }
leptos_axum = { version = "0.4" }
leptos_reactive = { version = "0.4" }



[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[[workspace.metadata.leptos]]
# project name
name = "hj-blog"
bin-package = "serv"
#bin-features = ["ssr"]
bin-default-features = false
lib-package = "browser"
lib-features = ["hydrate"]
lib-default-features = false

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "hj"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "blog/ui/style.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "blog/ui/public"
