[package]
name = "hj-mp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0.38"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
reqwest = { version = "0.11.17", features = ["json"] }
base64 = "0.21.0"
time = { version = "0.3.19", features = ["formatting", "parsing", "macros", "serde-human-readable"] }
http = { version = "0.2.8" }
async-trait = "0.1.68"
tokio = { version = "1.22.0", features = ["full"] }
