[package]
name = "serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.25"
cfg-if = "1.0.0"
leptos = { version = "0.3", default-features = false, features = ["serde"] }
leptos_axum = { version = "0.3", default-features = false }
leptos_meta = { version = "0.3", default-features = false }
leptos_router = { version = "0.3", default-features = false }
leptos_reactive = { version = "0.3", default-features = false }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
gloo-net = { version = "0.2.5", features = ["http"] }
reqwest = { version = "0.11.13", features = ["json"] }
axum = { version = "0.6.1", features = ["http2", "macros", "headers"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["fs", "trace", "compression-gzip", "compression-deflate", "compression-zstd", "async-compression"] }
tokio = { version = "1.22.0", features = ["full"] }
http = { version = "0.2.8" }
thiserror = "1.0.38"
wasm-bindgen = "0.2"
elasticsearch = { version = "8.4.0-alpha.1" }
once_cell = { version = "1.17.1" }
time = { version = "0.3.19", features = ["formatting", "parsing", "macros", "serde-human-readable"] }
toml = { version = "0.7.2" }
clap = { version = "4.1.6", features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
lazy_static = "1.4.0"

biz = { path = "../biz" }
ui = { path = "../ui", features = ["ssr"] }