[package]
name = "biz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
leptos = { workspace = true, default-features = false, features = ["serde", "stable"] }
leptos_axum = { workspace = true, default-features = false }
leptos_reactive = { workspace = true, default-features = false }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
reqwest = { version = "0.11.13", features = ["json"] }
axum = { version = "0.6.1", features = ["http2", "macros", "headers"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["fs", "trace", "compression-gzip", "compression-deflate", "compression-zstd", "async-compression"] }
tokio = { version = "1.22.0", features = ["full"] }
http = { version = "0.2.8" }
thiserror = "1.0.38"
elasticsearch = { version = "8.4.0-alpha.1" }
time = { version = "0.3.19", features = ["formatting", "parsing", "macros", "serde-human-readable"] }
tracing = { version = "0.1.37" }
lazy_static = "1.4.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16" }
toml = { version = "0.7.2" }
