[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
console_log = "1.0.0"
leptos = { workspace = true, features = ["serde", "stable"] }
leptos_axum = { workspace = true, default-features = false, optional = true }
leptos_meta = { workspace = true, default-features = false }
leptos_router = { workspace = true, default-features = false, features = ["stable"] }
leptos_reactive = { workspace = true, default-features = false }
http = { version = "0.2.8" }
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.38"
time = { version = "0.3.19", features = ["formatting", "parsing", "macros", "serde-human-readable"] }
biz = { path = "../biz", optional = true }
elasticsearch = { version = "8.4.0-alpha.1", optional = true }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["dep:biz", "dep:elasticsearch", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
